tests/golden/cases/undefined_name_unicode.txt
tests/golden/cases/undefined_name_unicode.suay:1:7: runtime error: Undefined name 'z'
say · z
      ^
